--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ authors = ["Jorge Florian <jafn28@gmail.com>"]
 python = "^3.9"
 fastapi = "^0.65.2"
 uvicorn = "^0.14.0"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.902"
 flake8 = "^3.9.2"
+types-requests = "^0.1.11"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
