--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mypy = "^0.902"
 flake8 = "^3.9.2"
 types-requests = "^0.1.11"
 types-redis = "^3.5.4"
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
