--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   web_service:
     build: .
-    command: uvicorn src.server:app --host 0.0.0.0 --port 8000
+    command: uvicorn src.server:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/code
     ports:
